add last height query
