# webserver/src/response/namada_state.rs
@@ -1,0 +1,6 @@
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Debug, Deserialize, Serialize, Default)]
+pub struct LatestHeightResponse {
+    pub block_height: u64,
+}
